<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/split_the_bill"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/frmPromptInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_bill"
                android:drawablePadding="5dp"
                android:hint="@string/prompt_bill"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_group"
                android:drawablePadding="5dp"
                android:hint="@string/prompt_people"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/prompt_tip"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorGreen"
            android:text="@string/yes"
            android:textColor="@android:color/white"
            android:onClick="onClick_ChangeTip"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorRed"
            android:text="@string/no"
            android:textColor="@android:color/white"
            android:onClick="onClick_ChangeTip" />

        <Button
            android:id="@+id/btnChangeTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/change_tip_percentage"
            android:textColor="@android:color/white"
            android:onClick="onClick_ChangeTip"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tip: 10%"
        android:textSize="25sp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="@drawable/spinner"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/frmFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="Total Bill without tip: R\n Tip: R\nTotal Bill wit Tip: R\nSplit: R" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/ic_feedback_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorGreen"
            android:src="@drawable/ic_done" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/ic_feedback_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorRed"
            android:src="@drawable/ic_error"/>

        <Button
            android:id="@+id/btnNewBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/new_bill"
            android:textColor="@android:color/white"
            android:onClick="onClick_ChangeTip"/>

    </LinearLayout>

</LinearLayout>